.provarCaches/00D5f000005vwGkEAI/objects/rstk__opqtybook__c.object
<CustomObject>
    <description>opqtybook__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_chargeqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Quantity</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_chargetypeind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_clockno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Clock No</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divopqtybooks</relationshipLabel>
        <relationshipName>divopqtybooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_duedte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_empl_name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>empl_name</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item No</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_op_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_oper__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>oper</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ordno</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_ordno_ui__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order No</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>ZZ-OPQTYBOOK</relationshipLabel>
        <relationshipName>ZZ_OPQTYBOOK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_ordsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_procno_display__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Process</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_proj__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_proj_display__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_qtyavail__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Quantity Available at this Operation at the time of the user clocking off of the Operation.</inlineHelpText>
        <label>Quantity Available</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_qtycomp__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Complete</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_qtymoved__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Moved</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_qtyship__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Shipped</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ-OPQTYBOOK</relationshipLabel>
        <relationshipName>ZZ_OPQTYBOOK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_syusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Employee</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>ZZ-OPQTYBOOK</relationshipLabel>
        <relationshipName>ZZ_OPQTYBOOK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_usrno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>usrno</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_wctr_display__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Center</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_woopqtyind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>woopqtyind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__opqtybook_woordop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>ZZ-OPQTYBOOK</relationshipLabel>
        <relationshipName>ZZ_OPQTYBOOK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ZZ-OPQTYBOOK</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ-OPQTYBOOK</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>